typescript/checker/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration8_es6.ts.stderr
error: UndefinedSymbol {
    sym: Atom('await' type=static),
    span: Span {
        lo: BytePos(
            51,
        ),
        hi: BytePos(
            56,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration8_es6.ts:3:12
  |
3 | var v = { [await]: foo }
  |            ^^^^^

error: UndefinedSymbol {
    sym: Atom('foo' type=inline),
    span: Span {
        lo: BytePos(
            59,
        ),
        hi: BytePos(
            62,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration8_es6.ts:3:20
  |
3 | var v = { [await]: foo }
  |                    ^^^

